--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>
-      Hello...
+      SuburbanNinjaMC - Musician and YouTuber
     </title>
+    <script src="script.js"></script>
   </head>
   <body>
-    
+    <h1 id="worldTaunt">Click to say Hello World</h1>
   </body>
 </html>
