--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>
       SuburbanNinjaMC - Musician and YouTuber
     </title>
-    <script src="script.js"></script>
   </head>
   <body>
     <h1 id="worldTaunt">Click to say Hello World</h1>
+    <!--Do not delete below!!!!!!!!! -->
+    <script src="script.js"></script>
   </body>
 </html>
