--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <h1 id="worldTaunt">Click to say Hello World</h1>
+    <h1 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h1>
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
   </body>
