--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h1>
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
+    <style>
+      #worldTaunt {
+        font-family Verdana;
+      }
+    </style>
   </body>
 </html>
