--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h1>
+    <h2 id = "LELZAOODLEDOOZ">Bruh Bruh Bruh Bruh</h2>
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
     <style>
