--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
     <style>
       #worldTaunt {
-        font-family Verdana;
+        font-family: Verdana;
       }
     </style>
   </body>
