--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   </head>
   <body>
     <h1 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h1>
-    <h2 id = "LELZAOODLEDOOZ">Bruh Bruh Bruh Bruh</h2>
+    <h2 id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
+    #subscribe for more.</h2>
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
     <style>
       #worldTaunt {
         font-family: Verdana;
+      }
+      
+      #intro {
+        font-family: Verdana;
+        font-style: italic;
+        font-size: 20px;
       }
     </style>
   </body>
