--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
     
+    <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel">Music Label</a>
   </body>
 </html>
