--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="script.js"></script>
     
     <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel">Music Label</a>
+    <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel">Main Channel</a>
   </body>
 </html>
