--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <link rel="stylesheet" type="text/css" href="style.css">
     <h1 id = "Title">SuburbanNinjaMC</h1>
-    <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2>
+    <!-- <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
     <p id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
     #subscribe for more.</p>
     <!--Do not delete below!!!!!!!!! -->
