--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     
     <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel">Music Label</a>
     <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel">Main Channel</a>
+    <a href="http://aelon.x10.mx" id = "Aelon">Arkagaen</a>
   </body>
 </html>
