--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
     
-    <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel">Music Label</a>
-    <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel">Main Channel</a>
+    <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel" target = _blank>Music Label</a>
+    <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel" target = _blank>Main Channel</a>
     <a href="http://aelon.x10.mx" id = "Aelon">Arkagaen</a>
   </body>
 </html>
