--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       SuburbanNinjaMC - Musician and YouTuber
     </title>
   </head>
-  <body>
+  <body id = "Body">
     <link rel="stylesheet" type="text/css" href="style.css">
     <h1 id = "Title">SuburbanNinjaMC</h1>
     <!-- <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
