--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="dropdown">
       <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="#">Profile</a>
+          <a href="#">Messenger</a>
+          <a href="#">Other Links</a>
         </div>
       </div>
     <link rel="stylesheet" type="text/css" href="style.css">
