--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     </title>
   </head>
   <body id = "Body">
-    <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
-          <a href="#">Profile</a>
-          <a href="#">Messenger</a>
-          <a href="#">Other Links</a>
+    <div style = "float:right;">
+      <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+          <div class="dropdown-content">
+            <a href="#">Profile</a>
+            <a href="#">Messenger</a>
+            <a href="#">Other Links</a>
+          </div>
         </div>
-      </div>
+    </div>
     <link rel="stylesheet" type="text/css" href="style.css">
     <h1 id = "Title">SuburbanNinjaMC</h1>
     <!-- <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
