--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body id = "Body">
     <div style = "float:right;">
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
+        <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
             <a href="#">Profile</a>
             <a href="#">Messenger</a>
