--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </div>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <img src="https://yt3.ggpht.com/-_pPk3dCgOZw/AAAAAAAAAAI/AAAAAAAAAAA/y4OcQjWcxAg/s900-c-k-no-rj-c0xffffff/photo.jpg" alt="PhotoImage" id = "PhotoImage">
     <h1 id = "Title">SuburbanNinjaMC</h1>
     <!-- <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
     <p id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
@@ -26,6 +27,6 @@
     
     <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel" target=_blank>Music Label</a>
     <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel" target=_blank>Main Channel</a>
-    <a href="http://aelon.x10.mx" id = "Aelon">Arkagaen</a>
+    <a href="http://aelon.x10.mx" id = "Aelon" target=_blank>Arkagaen</a>
   </body>
 </html>
