--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <div class="dropdown-content">
             <a href="#">Profile</a>
             <a href="#">Messenger</a>
+            <a href="#">Settings</a>
             <a href="#">Other Links</a>
           </div>
         </div>
