--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body id = "Body">
     <div style = "float:right;">
+    <div id="fixedheader">
       <div class="dropdown">
         <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
@@ -16,6 +17,7 @@
             <a href="#">Other Links</a>
           </div>
         </div>
+    </div>
     </div>
     <link rel="stylesheet" type="text/css" href="style.css">
     <img src="https://yt3.ggpht.com/-_pPk3dCgOZw/AAAAAAAAAAI/AAAAAAAAAAA/y4OcQjWcxAg/s900-c-k-no-rj-c0xffffff/photo.jpg" alt="PhotoImage" id = "PhotoImage" width = "300" height = "300">
