--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <link rel="shortcut icon" href="untitled.png">
     <title>
       SuburbanNinjaMC - Musician and YouTuber
     </title>
