--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut-icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <title>
       SuburbanNinjaMC - Musician and YouTuber
     </title>
