--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="dropdown">
         <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
-            <a href="#">Profile</a>
+            <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
             <a href="#">Messenger</a>
             <a href="#">Settings</a>
             <a href="#">Other Links</a>
