--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <img src="https://yt3.ggpht.com/-_pPk3dCgOZw/AAAAAAAAAAI/AAAAAAAAAAA/y4OcQjWcxAg/s900-c-k-no-rj-c0xffffff/photo.jpg" alt="PhotoImage" id = "PhotoImage" width = "300" height = "300">
     <h1 id = "Title">SuburbanNinjaMC</h1>
-    <!-- <h2 id="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
+    <!-- <h2 d="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
     <p id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
     #subscribe for more.</p>
     <!--Do not delete below!!!!!!!!! -->
