--- a/profile/index.html
+++ b/profile/index.html
@@ -7,6 +7,7 @@
     </title>
   </head>
   <body>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <h1 id = "Title">Profile</h1>
     <p id = "Paragraph">This is your profile page. Edit your bio and tell us more about yourself.</p>
   </body>
