--- a/profile/index.html
+++ b/profile/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" sizes="16x16" href="/-/favicon-16x16.png">
     <title>
       Profile - SuburbanNinjaMC
     </title>
