--- a/profile/index.html
+++ b/profile/index.html
@@ -8,7 +8,8 @@
     </title>
   </head>
   <body>
-    
+    <div id="fixedheader">
+    </div>
     <h1 id = "Title">Profile</h1>
     <p id = "Paragraph">This is your profile page. Edit your bio and tell us more about yourself.</p>
     <link rel="stylesheet" type="text/css" href="style.css">
