--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="fixedheader">
+      <h1 id = "Logo">SuburbanNinjaMC</h1>
       <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
     </div>
     <br>
