--- a/profile/index.html
+++ b/profile/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div id="fixedheader">
-        <h1 id = "Logo">SuburbanNinjaMC</h1><a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
+      <div class="Header">
+        <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a><h1 id = "Logo">SuburbanNinjaMC</h1>
+        </div>
     </div>
     <br>
     <br>
