--- a/profile/index.html
+++ b/profile/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="fixedheader">
       <div class="Header">
-        <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a><h1 id = "Logo">SuburbanNinjaMC</h1>
+        <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
         </div>
     </div>
     <br>
