--- a/settings/index.html
+++ b/settings/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="icon" type="image/png" sizes="16x16" href="/-/favicon-16x16.png">
+    <title>
+      Profile - SuburbanNinjaMC
+    </title>
+  </head>
+  <body>
+    <div id="fixedheader">
+      <div class="Header">
+        <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <h1 id = "Title">Settings</h1>
+    <p id = "Paragraph">This is your settings page. Edit your bio and tell us more about yourself.</p>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </body>
+</html>
