--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     </title>
   </head>
   <body id = "Body">
+    <!-- This is the header -->
     <div id="fixedheader">
       <div style = "float:right;">
       <div class="dropdown">
         <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
             <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
-            <a href="#">Messenger</a>
+            <a href="http://suburbanninjamc.github.io/-/settings/">Messenger</a>
             <a href="#">Settings</a>
             <a href="#">Other Links</a>
           </div>
