--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
             <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
-            <a href="http://suburbanninjamc.github.io/-/settings/">Messenger</a>
-            <a href="#">Settings</a>
+            <a href="http://suburbanninjamc.github.io/-/settings/">Settings</a>
+            <a href="#">Messenger</a>
             <a href="#">Other Links</a>
           </div>
         </div>
