--- a/settings/index.html
+++ b/settings/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="icon" type="image/png" sizes="16x16" href="/-/favicon-16x16.png">
     <title>
-      Profile - SuburbanNinjaMC
+      Settings - SuburbanNinjaMC
     </title>
   </head>
   <body>
