--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <div id="fixedheader">
+      <div class="dropdown">
+        <button class="dropbtn">YourName</button>
+          <div class="dropdown-content">
+            <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
+            <a href="http://suburbanninjamc.github.io/-/settings/">Settings</a>
+            <a href="#">Messenger</a>
+            <a href="#">Other Links</a>
+          </div>
+        </div>
+    </div>
       <div class="Header">
         <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
         </div>
