--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="fixedheader">
+      <div style = "float:right;">
       <div class="dropdown">
         <button class="dropbtn">YourName</button>
           <div class="dropdown-content">
@@ -18,6 +19,7 @@
             <a href="#">Other Links</a>
           </div>
         </div>
+      </div>
     </div>
       <div class="Header">
         <a href="http://suburbanninjamc.github.io/-/" id = "Home">  Home</a>
