--- a/otherlinks/index.html
+++ b/otherlinks/index.html
@@ -1,21 +1,9 @@
  <!DOCTYPE html>
  <html>
  <head>
+   <title>Other Links - SuburbanNinjaMC</title>
  </head>
  <body>
- <div id="fixedheader">
-      <div style = "float:right;">
-      <div class="dropdown">
-        <button class="dropbtn">YourName</button>
-          <div class="dropdown-content">
-            <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
-            <a href="http://suburbanninjamc.github.io/-/settings/">Settings</a>
-            <a href="#">Messenger</a>
-            <a href="#">Other Links</a>
-          </div>
-        </div>
-    </div>
-    </div>
     <link rel="stylesheet" type="text/css" href="style.css">
 </body>
 </html>
