--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
             <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
             <a href="http://suburbanninjamc.github.io/-/settings/">Settings</a>
             <a href="#">Messenger</a>
-            <a href="#">Other Links</a>
+            <a href="http://suburbanninjamc.github.io/-/otherlinks/">Other Links</a>
           </div>
         </div>
     </div>
