--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="http://suburbanninjamc.github.io/-/profile/">Profile</a>
             <a href="http://suburbanninjamc.github.io/-/settings/">Settings</a>
             <a href="#">Messenger</a>
-            <a href="#">Other Links</a>
+            <a href="http://suburbanninjamc.github.io/-/settings/">Other Links</a>
           </div>
         </div>
     </div>
