Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
   <head>
     <link rel="icon" type="image/png" sizes="16x16" href="/-/favicon-16x16.png">
@@ -7,7 +7,6 @@
     </title>
   </head>
   <body id = "Body">
-    <!-- This is the header -->
     <div id="fixedheader">
       <div style = "float:right;">
       <div class="dropdown">
@@ -27,10 +26,8 @@
     <br>
     <img src="https://yt3.ggpht.com/-_pPk3dCgOZw/AAAAAAAAAAI/AAAAAAAAAAA/y4OcQjWcxAg/s900-c-k-no-rj-c0xffffff/photo.jpg" alt="PhotoImage" id = "PhotoImage" width = "300" height = "300">
     <h1 id = "Title">SuburbanNinjaMC</h1>
-    <!-- <h2 d="worldTaunt" onclick="sayHello()">Click to say Hello World</h2> -->
     <p id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
     #subscribe for more.</p>
-    <!--Do not delete below!!!!!!!!! -->
     <script src="script.js"></script>
     
     <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel" target=_blank>Music Label</a>
@@ -38,3 +35,7 @@
     <a href="http://aelon.x10.mx" id = "Aelon" target=_blank>Arkagaen</a>
   </body>
 </html>
+-->
+<script>
+  location.href="index.php";
+</script>
