--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="icon" type="image/png" sizes="16x16" href="/-/favicon-16x16.png">
@@ -35,7 +35,4 @@
     <a href="http://aelon.x10.mx" id = "Aelon" target=_blank>Arkagaen</a>
   </body>
 </html>
--->
-<script>
-  location.href="http://suburbanninjamc.github.io/-/index.php";
-</script>
+
