--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
             <a href="http://suburbanninjamc.github.io/-/otherlinks/">Other Links</a>
           </div>
         </div>
-    </div>
+      </div>
     </div>
     <link rel="stylesheet" type="text/css" href="style.css">
     <br>
     <br>
     <br>
     <img src="https://yt3.ggpht.com/-_pPk3dCgOZw/AAAAAAAAAAI/AAAAAAAAAAA/y4OcQjWcxAg/s900-c-k-no-rj-c0xffffff/photo.jpg" alt="PhotoImage" id = "PhotoImage" width = "300" height = "300">
-    <h1 id = "Title">SuburbanNinjaMC</h1>
-    <p id = "intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
+    <h1 id="Title">SuburbanNinjaMC</h1>
+    <p id="intro">Hello. I am SuburbanNinjaMC. Welcome to my third website. Here you will find music, links to my youtube videos, and more.
     #subscribe for more.</p>
     <script src="script.js"></script>
-    
+    <div class="links>
     <a href="https://www.youtube.com/channel/UCMV7MuxUHWjc7M13QJz2Bbw" id = "MusicLabel" target=_blank>Music Label</a>
     <a href="https://www.youtube.com/channel/UCEtE0WHjz1tjSSxIlxy2PpA" id = "YouTubeChannel" target=_blank>Main Channel</a>
     <a href="http://aelon.x10.mx" id = "Aelon" target=_blank>Arkagaen</a>
+                                              </div>
   </body>
 </html>
 
